// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notify renders custom notifications 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="containerTopRight"
      >
        <div
          class="wrapper"
        >
          <div
            style="margin: 5px 0px; padding: 2px 5px; border: 1px solid #333; float: right; clear: right; width: 330px; box-sizing: border-box; cursor: pointer;"
          >
            Notification 1!
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    className="containerTopRight"
  >
    <div
      className="wrapper"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "border": "1px solid #333",
            "boxSizing": "border-box",
            "clear": "right",
            "cursor": "pointer",
            "float": "right",
            "margin": "5px 0",
            "padding": "2px 5px",
            "width": "330px",
          }
        }
      >
        Notification 1!
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Notify renders first notification with closeAll if showCloseAllBtn is true 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="containerTopRight"
      >
        <div
          class="wrapper"
        >
          <div
            class="has-close-all notification--success"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-check"
              />
            </span>
            <div
              class="content"
            >
              <div
                class="item__message"
              >
                Notification 1!
              </div>
            </div>
            <div
              class="close"
            />
            <div
              class="close-all"
            >
              Close All
            </div>
          </div>
          <div
            class="has-close notification--info"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-check"
              />
            </span>
            <div
              class="content"
            >
              <div
                class="item__message"
              >
                Notification 2!
              </div>
            </div>
            <div
              class="close"
            />
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    className="containerTopRight"
  >
    <div
      className="wrapper"
    >
      <div
        className="has-close-all notification--success"
      >
        <span
          className="icon"
        >
          <i
            className="fa fa-check"
          />
        </span>
        <div
          className="content"
        >
          <div
            className="item__message"
          >
            Notification 1!
          </div>
        </div>
        <div
          className="close"
          onClick={[Function]}
        />
        <div
          className="close-all"
          onClick={[Function]}
        >
          Close All
        </div>
      </div>
      <div
        className="has-close notification--info"
      >
        <span
          className="icon"
        >
          <i
            className="fa fa-check"
          />
        </span>
        <div
          className="content"
        >
          <div
            className="item__message"
          >
            Notification 2!
          </div>
        </div>
        <div
          className="close"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Notify renders first notification without closeAll if showCloseAllBtn is false 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="containerTopRight"
      >
        <div
          class="wrapper"
        >
          <div
            class="notification--success"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-check"
              />
            </span>
            <div
              class="content"
            >
              <div
                class="item__message"
              >
                Notification 1!
              </div>
            </div>
            <div
              class="close"
            />
          </div>
          <div
            class="has-close notification--info"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-check"
              />
            </span>
            <div
              class="content"
            >
              <div
                class="item__message"
              >
                Notification 2!
              </div>
            </div>
            <div
              class="close"
            />
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    className="containerTopRight"
  >
    <div
      className="wrapper"
    >
      <div
        className="notification--success"
      >
        <span
          className="icon"
        >
          <i
            className="fa fa-check"
          />
        </span>
        <div
          className="content"
        >
          <div
            className="item__message"
          >
            Notification 1!
          </div>
        </div>
        <div
          className="close"
          onClick={[Function]}
        />
      </div>
      <div
        className="has-close notification--info"
      >
        <span
          className="icon"
        >
          <i
            className="fa fa-check"
          />
        </span>
        <div
          className="content"
        >
          <div
            className="item__message"
          >
            Notification 2!
          </div>
        </div>
        <div
          className="close"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Notify renders notifications 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="containerTopRight"
      >
        <div
          class="wrapper"
        >
          <div
            class="has-close-all notification--success"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-check"
              />
            </span>
            <div
              class="content"
            >
              <div
                class="item__message"
              >
                Notification 1!
              </div>
            </div>
            <div
              class="close"
            />
            <div
              class="close-all"
            >
              Close All
            </div>
          </div>
          <div
            class="has-close notification--info"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-check"
              />
            </span>
            <div
              class="content"
            >
              <div
                class="item__message"
              >
                Notification 2!
              </div>
            </div>
            <div
              class="close"
            />
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    className="containerTopRight"
  >
    <div
      className="wrapper"
    >
      <div
        className="has-close-all notification--success"
      >
        <span
          className="icon"
        >
          <i
            className="fa fa-check"
          />
        </span>
        <div
          className="content"
        >
          <div
            className="item__message"
          >
            Notification 1!
          </div>
        </div>
        <div
          className="close"
          onClick={[Function]}
        />
        <div
          className="close-all"
          onClick={[Function]}
        >
          Close All
        </div>
      </div>
      <div
        className="has-close notification--info"
      >
        <span
          className="icon"
        >
          <i
            className="fa fa-check"
          />
        </span>
        <div
          className="content"
        >
          <div
            className="item__message"
          >
            Notification 2!
          </div>
        </div>
        <div
          className="close"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Notify renders with required props 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="containerTopRight"
      >
        <div
          class="wrapper"
        />
      </div>
    </div>
  }
>
  <div
    className="containerTopRight"
  >
    <div
      className="wrapper"
    />
  </div>
</Portal>
`;

exports[`Notify renders with the correct className when customStyles is used 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="CustomPosition"
      >
        <div
          class="wrapper"
        />
      </div>
    </div>
  }
>
  <div
    className="CustomPosition"
  >
    <div
      className="wrapper"
    />
  </div>
</Portal>
`;

exports[`Notify unmounts without error 1`] = `null`;
